Closed
Bug 858108
Opened 13 years ago
Closed 13 years ago
GC: Root the Locale interface
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: jonco, Assigned: jonco)
References
Details
Attachments
(1 file)
|
9.65 KB,
patch
|
terrence
:
review+
bholley
:
review+
|
Details | Diff | Splinter Review |
Here's a patch to root the Locale interface.
I guess if you're ok with this I should also get this reviewed externally too?
Attachment #733382 -
Flags: review?(terrence)
Comment 1•13 years ago
|
||
Comment on attachment 733382 [details] [diff] [review]
Proposed changes
Review of attachment 733382 [details] [diff] [review]:
-----------------------------------------------------------------
Very nice!
::: js/xpconnect/src/XPCLocale.cpp
@@ +225,2 @@
> reinterpret_cast<jschar*>(unichars),
> unicharLength);
Indent.
Attachment #733382 -
Flags: review?(terrence) → review+
Comment 2•13 years ago
|
||
Comment on attachment 733382 [details] [diff] [review]
Proposed changes
Review of attachment 733382 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/xpconnect/src/XPCLocale.cpp
@@ +225,4 @@
> reinterpret_cast<jschar*>(unichars),
> unicharLength);
> + if (str) {
> + rval.set(STRING_TO_JSVAL(str));
setString
Attachment #733382 -
Flags: review?(bobbyholley+bmo)
Comment 3•13 years ago
|
||
Comment on attachment 733382 [details] [diff] [review]
Proposed changes
Review of attachment 733382 [details] [diff] [review]:
-----------------------------------------------------------------
rs=me on the XPCLocale changes
Attachment #733382 -
Flags: review?(bobbyholley+bmo) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Blocks: ExactRootingBrowser
Comment 5•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
| Assignee | ||
Updated•12 years ago
|
Blocks: 773686
Keywords: dev-doc-needed
Updated•6 years ago
|
Keywords: dev-doc-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•