Bug 858108 - GC: Root the Locale interface r=terrence r=bholley